[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conocimientos-josuecastillo"
version = "0.1.0"
description = "Repositorio de conocimientos en Python"
authors = [
  { name = "Josué Castillo", email = "josuecastillo0798@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
